--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@chakra-ui/react": "^1.8.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/poppins": "^4.5.1",
     "axios": "^0.25.0",
     "framer-motion": "^5.6.0",
     "next": "12.0.9",
